Add call button

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
             <input id="code" class="code" readonly></input>
             <span id="render-copy">Click code to copy</span>
             <span id="render-copied" class="orange" style="display: none">Copied to clipboard!</span>
+            <span>Or</span>
+            <a id="call-link" href="#" class="button">Call</a>
         </div>
     </div>
     <div id="view-record" class="view-record">
